# fast_eda

./: .gitignore  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: conf.py  example.ipynb  make.bat
fast_eda/docs/: Makefile  conf.py
fast_eda/src/fast_eda/: __init__.py
fast_eda/tests/: test_fast_eda.py
src/fast_eda/: count_nulls.py  fast_eda.py
tests/: test_correlation_matrix_viz.py  test_count_nulls.py  test_describe_function.py  test_distribution_plots.py
